Рефакторинг: config, utils, cleanup
✅ Приоритет 1 выполнен:

1. config.py - централизованная конфигурация
   - CompanyConfig с реквизитами компании
   - PathsConfig с путями к файлам
   - APIConfig с токенами
   - TimeoutConfig, AIConfig, ValidationConfig

2. utils.py - утилиты общего назначения
   - to_float_safe() - безопасная конвертация
   - validate_date(), validate_inn()
   - format_money(), format_quantity()
   - normalize_name(), clean_string()
   - Покрыто doctests

3. Обновлен .gitignore
   - Python cache, venv, IDE
   - logs/, tmp_images/, sbis_token.json
   - Генерируемые XML

4. Удален мусор
   - create_act_from_xml.py → archive/
   - build_act_xml.py → archive/
   - test_ocr_diagnosis.py → archive/
   - XML и MD файлы → archive/
   - CODE_AUDIT_2025.md → docs/

5. Заменены hardcoded значения в daily_act.py
   - COMPANY.inn, warehouse_name, warehouse_id
   - recipient_name, account, writeoff_purpose

Осталось: рефакторинг build_native_xml()

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,60 @@
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Temporary files
+tmp_images/
+*.tmp
+*.bak
+
+# Logs
+logs/
+*.log
+
+# SBIS tokens and sensitive data
+sbis_token.json
+*.token
+
+# Generated XML files
+act_generated.xml
+ON_*.xml
+
+# Excel temporary files
+~$*.xlsx
+~$*.xls
+
+# pytest cache
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+
+# Documentation artifacts
+docs/_build/
